--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,7 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/dukmivqb/public_html/
-    - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp main.js $DEPLOYPATH
-    - /bin/cp styles.css $DEPLOYPATH
-    - /bin/cp -R images $DEPLOYPATH
+    - /bin/cp /home/dukmivqb/dementia/index.html $DEPLOYPATH
+    - /bin/cp /home/dukmivqb/dementia/main.js $DEPLOYPATH
+    - /bin/cp /home/dukmivqb/dementia/styles.css $DEPLOYPATH
+    - /bin/cp -R /home/dukmivqb/dementia/images $DEPLOYPATH
